Open map with prefered location

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.nedim.sunshine_my.app.MainActivity">
+
+    <item
+        android:id="@+id/action_location"
+        android:title="@string/menu_location_title"
+        android:orderInCategory="30"
+        app:showAsAction = "never" />
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
